--- a/error.html
+++ b/error.html
@@ -1,101 +1,125 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Garden App - Error</title>
     <style>
-        body {
-            margin: 0;
-            padding: 0;
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-            background: linear-gradient(135deg, #ff6b6b 0%, #ee5a52 100%);
-            color: white;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-        }
-        .error-container {
-            text-align: center;
-            padding: 40px;
-            background: rgba(255, 255, 255, 0.1);
-            border-radius: 10px;
-            backdrop-filter: blur(10px);
-        }
-        h1 {
-            margin: 0 0 20px;
-            font-size: 2.5em;
-            font-weight: 300;
-        }
-        p {
-            margin: 0 0 10px;
-            font-size: 1.1em;
-            opacity: 0.9;
-        }
-        .retry-button {
-            background: white;
-            color: #ff6b6b;
-            border: none;
-            padding: 12px 24px;
-            border-radius: 6px;
-            font-size: 1em;
-            cursor: pointer;
-            margin-top: 20px;
-        }
-        .retry-button:hover {
-            background: #f0f0f0;
-        }
+      body {
+        margin: 0;
+        padding: 0;
+        font-family:
+          -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
+        background: linear-gradient(135deg, #ff6b6b 0%, #ee5a52 100%);
+        color: white;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+      }
+      .error-container {
+        text-align: center;
+        padding: 40px;
+        background: rgba(255, 255, 255, 0.1);
+        border-radius: 10px;
+        backdrop-filter: blur(10px);
+      }
+      h1 {
+        margin: 0 0 20px;
+        font-size: 2.5em;
+        font-weight: 300;
+      }
+      p {
+        margin: 0 0 10px;
+        font-size: 1.1em;
+        opacity: 0.9;
+      }
+      .retry-button {
+        background: white;
+        color: #ff6b6b;
+        border: none;
+        padding: 12px 24px;
+        border-radius: 6px;
+        font-size: 1em;
+        cursor: pointer;
+        margin-top: 20px;
+      }
+      .retry-button:hover {
+        background: #f0f0f0;
+      }
     </style>
-</head>
-<body>
+  </head>
+  <body>
     <div class="error-container">
-        <h1>⚠️ Garden Setup Required</h1>
-        <p>Could not start the garden server.</p>
-        <div style="text-align: left; max-width: 500px; margin: 20px auto;">
-            <h3>Please ensure:</h3>
-            <ol>
-                <li><strong>Install Garden tool:</strong><br>
-                    <code style="background: rgba(255,255,255,0.2); padding: 2px 6px; border-radius: 3px;">npm install -g @adaptivekind/garden</code>
-                </li>
-                <li><strong>Verify Garden command works:</strong><br>
-                    <code style="background: rgba(255,255,255,0.2); padding: 2px 6px; border-radius: 3px;">garden -p 8888</code> in your project directory
-                </li>
-                <li><strong>Directory exists and contains markdown files</strong></li>
-                <li><strong>Configure directory:</strong><br>
-                    Click the menu bar icon (M) → "Configure Directory"
-                </li>
-            </ol>
-        </div>
-        <button class="retry-button" onclick="retryGarden()">Retry</button>
-        <button class="retry-button" onclick="configureDirectory()" style="margin-left: 10px;">Configure Directory</button>
+      <h1>⚠️ Garden Setup Required</h1>
+      <p>Could not start the garden server.</p>
+      <div style="text-align: left; max-width: 500px; margin: 20px auto">
+        <h3>Please ensure:</h3>
+        <ol>
+          <li>
+            <strong>Install Garden tool:</strong><br />
+            <code
+              style="
+                background: rgba(255, 255, 255, 0.2);
+                padding: 2px 6px;
+                border-radius: 3px;
+              "
+              >npm install -g @adaptivekind/garden</code
+            >
+          </li>
+          <li>
+            <strong>Verify Garden command works:</strong><br />
+            <code
+              style="
+                background: rgba(255, 255, 255, 0.2);
+                padding: 2px 6px;
+                border-radius: 3px;
+              "
+              >garden -p 8888</code
+            >
+            in your project directory
+          </li>
+          <li><strong>Directory exists and contains markdown files</strong></li>
+          <li>
+            <strong>Configure directory:</strong><br />
+            Click the menu bar icon (M) → "Configure Directory"
+          </li>
+        </ol>
+      </div>
+      <button class="retry-button" onclick="retryGarden()">Retry</button>
+      <button
+        class="retry-button"
+        onclick="configureDirectory()"
+        style="margin-left: 10px"
+      >
+        Configure Directory
+      </button>
     </div>
     <script>
-        async function retryGarden() {
-            const button = document.querySelector('.retry-button');
-            button.textContent = 'Restarting...';
-            button.disabled = true;
-            
-            try {
-                await window.electronAPI.restartGarden();
-            } catch (error) {
-                console.error('Failed to restart garden:', error);
-                button.textContent = 'Retry Failed';
-                setTimeout(() => {
-                    button.textContent = 'Retry';
-                    button.disabled = false;
-                }, 2000);
-            }
+      async function retryGarden() {
+        const button = document.querySelector(".retry-button");
+        button.textContent = "Restarting...";
+        button.disabled = true;
+
+        try {
+          await window.electronAPI.restartGarden();
+        } catch (error) {
+          console.error("Failed to restart garden:", error);
+          button.textContent = "Retry Failed";
+          setTimeout(() => {
+            button.textContent = "Retry";
+            button.disabled = false;
+          }, 2000);
         }
-        
-        async function configureDirectory() {
-            try {
-                await window.electronAPI.configureDirectory();
-            } catch (error) {
-                console.error('Failed to configure directory:', error);
-            }
+      }
+
+      async function configureDirectory() {
+        try {
+          await window.electronAPI.configureDirectory();
+        } catch (error) {
+          console.error("Failed to configure directory:", error);
         }
+      }
     </script>
-    </div>
-</body>
+  </body>
 </html>
